# rdetoolkit

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  Cargo.toml.dev  Cargo.toml.publish  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pip.conf  pyproject.toml  pytest.xml  tox.ini  versions.json
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: cache.yml  core_module.yml  coverage.yml  coverage_badge.yml  coverage_pr_reports.yml  create-release.yml  docs-ci-dry-run.yml  docs-ci.yml  main.yml  pr-agent.yaml  pypi-release.yml
contribute/documents_contributing/: index.html
contribute/home/: index.html
contribute/sourcecode_contributing/: index.html
dev/: 404.html  index.html  objects.inv
dev/contribute/documents_contributing/: index.html
dev/contribute/home/: index.html
dev/contribute/sourcecode_contributing/: index.html
dev/install/: index.html
dev/rdetoolkit/: index.html
dev/rdetoolkit/errors/: index.html
dev/rdetoolkit/exceptions/: index.html
dev/rdetoolkit/fileops/: index.html
dev/rdetoolkit/img2thumb/: index.html
dev/rdetoolkit/rde2util/: index.html
dev/rdetoolkit/rdelogger/: index.html
dev/rdetoolkit/validation/: index.html
dev/rdetoolkit/workflows/: index.html
dev/search/: search_index.json
dev/usage/cli/: index.html
dev/usage/quickstart/: index.html
dev/usage/validation/: index.html
docs/: config.md  contributing.md  index.md  install.md  magic_variable.md  mode.md  quickstart.md  usage.md
docs/contribute/: documents_contributing.md  home.md  sourcecode_contributing.md
docs/css/: extra.css
docs/rdetoolkit/: config.md  core.md  csv2graph.md  errors.md  exceptions.md  fileops.md  img2thumb.md  index.md  invoiceFile.md  invoicefile.md  modeproc.md  rde2util.md  rdelogger.md  validation.md  workflows.md
docs/rdetoolkit/cmd/: command.md  gen_excelinvoice.md
docs/rdetoolkit/impl/: compressed_controller.md  input_controller.md
docs/rdetoolkit/interface/: filechecker.md
docs/rdetoolkit/models/: config.md  invoice.md  invoice_schema.md  metadata.md  rde2types.md  result.md
docs/usage/: cli.md  config.md  directory.md  docker.md  errorhandling.md  feature_description.md  file_folder_mode.md  magic_variable.md  metadata_definition_file.md  mode.md  quickstart.md  structured.md  validation.md
docs/usage/config/: config.md  file_folder_mode.md  magic_variable.md  mode.md
docs/usage/structured_process/: directory.md  errorhandling.md  feature_description.md  rdepath.md  structured.md
install/: index.html
rdetoolkit/: index.html
rdetoolkit-core/: build.rs  charset_detector.rs  fsops.rs  lib.rs
rdetoolkit-core/imageutil/: processing.rs
rdetoolkit/cmd/command/: index.html
rdetoolkit/cmd/gen_excelinvoice/: index.html
rdetoolkit/config/: index.html
rdetoolkit/csv2graph/: index.html
rdetoolkit/exceptions/: index.html
rdetoolkit/img2thumb/: index.html
rdetoolkit/impl/compressed_controller/: index.html
rdetoolkit/impl/input_controller/: index.html
rdetoolkit/interface/filechecker/: index.html
rdetoolkit/invoicefile/: index.html
rdetoolkit/models/invoice/: index.html
rdetoolkit/models/invoice_schema/: index.html
rdetoolkit/models/metadata/: index.html
rdetoolkit/models/rde2types/: index.html
rdetoolkit/models/result/: index.html
rdetoolkit/modeproc/: index.html
rdetoolkit/rde2util/: index.html
rdetoolkit/rdelogger/: index.html
rdetoolkit/validation/: index.html
rdetoolkit/workflows/: index.html
rdetoolkit_core/: lib.rs
search/: search_index.json
src/: rdetoolkit.pyi
src/rdetoolkit/: __init__.py  __init__.pyi  __main__.py  cli.py  cli.pyi  config.py  config.pyi  core.pyi  csv2graph.py  errors.py  errors.pyi  exceptions.py  exceptions.pyi  fileops.py  fileops.pyi  img2thumb.py  img2thumb.pyi  invoiceFile.py  invoicefile.py  invoicefile.pyi  modeproc.py  modeproc.pyi  rde2util.py  rde2util.pyi  rdelogger.py  rdelogger.pyi  rdetoolkit_core.pyi  validation.py  validation.pyi  workflows.py  workflows.pyi
src/rdetoolkit/cmd/: command.py  command.pyi  default.py  default.pyi  gen_excelinvoice.py  gen_excelinvoice.pyi
src/rdetoolkit/impl/: compressed_controller.py  compressed_controller.pyi  input_controller.py
src/rdetoolkit/interfaces/: filechecker.py  filechecker.pyi
src/rdetoolkit/models/: config.py  config.pyi  invoice.py  invoice.pyi  invoice_schema.py  invoice_schema.pyi  metadata.py  metadata.pyi  rde2types.py  rde2types.pyi  result.py  result.pyi
stubs/rdetoolkit/: __init__.pyi  __main__.pyi  exceptions.pyi  img2thumb.pyi  invoiceFile.pyi  modeproc.pyi  rde2util.pyi  rdelogger.pyi  workflows.pyi
tests/: conftest.py  test_backup_invoice.py  test_check_files.py  test_cli.py  test_compressedfile_mode.py  test_config.py  test_exception.py  test_filename_mapping_rule.py  test_fileops.py  test_generate_folder_paths_iterator.py  test_inputfile_checker.py  test_inputmode_processer.py  test_invoicefile.py  test_logger.py  test_models.py  test_rde2types.py  test_rde2util.py  test_registory.py  test_result.py  test_structured_error.py  test_stub.py  test_thumbnail.py  test_validator.py  test_workflow.py
tests/fixtures/: excelinvoice.py  invoice.py  metadata_json.py  schema.py  static.py
tests/samplefile/: invoice.json  invoice.schema.basic.json  invoice.schema.full.json  invoice.schema.json  invoice.schema_invalid.json  invoice.schema_none_custom.json  invoice.schema_none_generalAttributes.json  invoice.schema_none_sample.json  invoice.schema_none_specificAttributes.json  invoice.schema_not_support_value.json  invoice.schema_test.json  invoice_allow_none.json  invoice_invalid.json  invoice_invalid_none_basic.json  invoice_invalid_sample_anyof.json  test_excelinvoice_term_sample.csv  test_excelinvoice_term_sample_folder.csv
usage/docker/: index.html
usage/metadata_definition_file/: index.html
usage/quickstart/: index.html
usage/validation/: index.html
v1.0.4/: objects.inv
v1.1.0/rdetoolkit/: index.html
v1.1.0/search/: search_index.json
(+102 files in other folders)
