[package]
name = "rdetoolkit-core"
version = "0.2.0"
edition = "2021"
build = "rdetoolkit-core/build.rs"

[lib]
name = "rdetoolkit_core"
crate-type = ["cdylib", "rlib"]
path = "rdetoolkit-core/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.22.4", features = ["extension-module"] }
image = "0.24.6"

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[lints.clippy]
dbg_macro = "warn"
print_stdout = "warn"
