[project]
name = "rdetoolkit"
version = "0.1.9"
description = "A module that supports the workflow of the RDE2.0 dataset construction program"
authors = [
    { name = "Sonokawa Hayato", email = "SONOKAWA.Hayato@nims.go.jp" }
]
dependencies = [
    "chardet>=5.2.0",
    "charset-normalizer>=3.2.0",
    "numpy>=1.25.2",
    "matplotlib>=3.7.2",
    "openpyxl>=3.1.2",
    "pandas>=2.0.3",
    "build>=1.0.3",
    "click>=8.1.7",
    "toml>=0.10.2",
]
readme = "README.md"
requires-python = ">= 3.9"
package_data = {"rdetoolkit" = ["py.typed"]}

[project.urls]
"Homepage" = "https://gitlab.nims.go.jp/dpfc/data_registry/rde20/rdetoolkit"
"Bug Tracker" = "https://gitlab.nims.go.jp/dpfc/data_registry/rde20/rdetoolkit/-/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
select = [
    "F", # pyflakes
    "E", # pycodestyle
    "W", # pycodestyle warnings
    "I", # isort
    "D", # pydocstyle
]
ignore = ["D100", "D104", "D107"]
exclude = [
    "bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "tests"
]
# 1行の最大文字数は問わないとチーム内で合意
line-length = 250
indent-width = 4

[tool.ruff.format]
indent-style = "space"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
# __init__.pyは未使用インポートを許容
"__init__.py" = ["F401", "F403"]

[tool.mypy]
show_error_context = true
show_column_numbers = true
strict_optional = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
files = ["src/rdetoolkit/**/*.py"]
exclude = ["tests"]

[tool.coverage.run]
omit = ["tests/*", "interfaces/*"]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
    ]

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.7.0",
    "flake8>=6.0.0",
    "pyproject-flake8>=6.0.0.post1",
    "isort>=5.12.0",
    "lizard>=1.17.10",
    "mypy>=1.5.1",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "tox>=4.6.4",
    "types-python-dateutil>=2.8.19.14",
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.1",
    "mkdocstrings[crystal,python]>=0.24.0",
    "ruff>=0.1.14",
    "pre-commit>=3.6.0",
]

[tool.hatch.metadata]
allow-direct-references = true
