[project]
name = "rdetoolkit"
version = "0.9.0"
description = "A module that supports the workflow of the RDE2.0 dataset construction program"
authors = [{ name = "Sonokawa Hayato", email = "SONOKAWA.Hayato@nims.go.jp" }]
keywords = ["rdetoolkit", "RDE", "toolkit", "structure", "dataset"]
dependencies = [
    "chardet>=5.2.0",
    "charset-normalizer>=3.2.0",
    "matplotlib>=3.7.2",
    "openpyxl>=3.1.2",
    "pandas>=2.0.3",
    "build>=1.0.3",
    "click>=8.1.7",
    "toml>=0.10.2",
    "pydantic>=2.6.3",
    "jsonschema>=4.21.1",
    "tomlkit>=0.12.4",
    "PyYAML>=6.0.1",
]
readme = "README.md"
requires-python = ">= 3.9"
package_data = { "rdetoolkit" = ["py.typed"] }

[project.urls]
"Homepage" = "https://github.com/nims-dpfc/rdetoolkit"
"Bug Tracker" = "https://github.com/nims-dpfc/rdetoolkit"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
select = [
    "F",  # pyflakes
    "E",  # pycodestyle
    "W",  # pycodestyle warnings
    "I",  # isort
    "D",  # pydocstyle
    "N",  # pep8-naming
    "PL", # Pylint
]
ignore = ["D100", "D101", "D104", "D105", "D107", "PLR0913"]
exclude = [
    "bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "tests",
    "stubs",
    "csv2graph.py",
    "src/rdetoolkit/models/invoice_schema.py", # Ignore pydocstyle warnings for this file as it is for defining pydantic models.
]
# The team has agreed not to enforce a maximum character limit per line.
line-length = 250
indent-width = 4

[tool.ruff.format]
indent-style = "space"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
# Unused imports are allowed in __init__.py.
"__init__.py" = ["F401", "F403"]

[tool.mypy]
show_error_context = true
show_column_numbers = true
strict_optional = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
exclude = ["tests", "src/rdetoolkit/stubs"]

[tool.coverage.run]
omit = ["tests/*", "interfaces/*"]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.7.0",
    "flake8>=6.0.0",
    "pyproject-flake8>=6.0.0.post1",
    "isort>=5.12.0",
    "lizard>=1.17.10",
    "mypy>=1.5.1",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "tox>=4.6.4",
    "types-python-dateutil>=2.8.19.14",
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.1",
    "mkdocstrings[crystal,python]>=0.24.0",
    "pre-commit>=3.6.0",
    "types-PyYAML>=6.0.12.20240311",
    "mkdocs-mermaid2-plugin>=1.1.1",
    "ruff>=0.4.3",
]

[tool.hatch.metadata]
allow-direct-references = true
